force-app/main/default/objects/DualEmploymentSurvey__c/DualEmploymentSurvey__c.object-meta.xml
<CustomObject>
    <description>This object is used to track employees who have a second job for compliance purposes.</description>
    <label>Dual Employment Survey</label>
    <nameField>
        <label>Dual Employment Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dual Employment Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>