force-app/main/default/objects/DualEmploymentSurvey__c/fields/Academic_Organizations__c.field-meta.xml
<CustomField>
    <fullName>Academic_Organizations__c</fullName>
    <label>Academic Organizations</label>
    <type>TextArea</type>
</CustomField>