force-app/main/default/objects/DualEmploymentSurvey__c/fields/Agrees_With_Attestation__c.field-meta.xml
<CustomField>
    <fullName>Agrees_With_Attestation__c</fullName>
    <label>Agrees With Attestation</label>
    <picklist>
        <picklistValues>
            <fullName>Agree</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Disagree</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>