force-app/main/default/objects/DualEmploymentSurvey__c/fields/Approval_Link__c.field-meta.xml
<CustomField>
    <fullName>Approval_Link__c</fullName>
    <formula>IF(Assigned_To_User__c = 1, 
CASE( Survey_Status__c  , 
2, HYPERLINK(&quot;/lightning/r/DualEmploymentSurvey__c/&quot; +  Id  +&quot;/view&quot;, &quot;Approve&quot;), 
3, HYPERLINK(&quot;/lightning/r/DualEmploymentSurvey__c/&quot; +  Id  +&quot;/view&quot;, &quot;Approve&quot;),
&quot;&quot;)
, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Link</label>
    <type>Text</type>
</CustomField>