force-app/main/default/objects/DualEmploymentSurvey__c/fields/ApproveDeny__c.field-meta.xml
<CustomField>
    <fullName>ApproveDeny__c</fullName>
    <description>Field is used for display and value should not be considered</description>
    <label>Approve Or Deny</label>
    <picklist>
        <picklistValues>
            <fullName>Approve</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Deny</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>