force-app/main/default/objects/DualEmploymentSurvey__c/fields/Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_User__c</fullName>
    <formula>IF(
  OR(
    AND(IF(Survey_Status__c = 2, 1, 0) = 1, IF(SupervisorId__c = $User.Id, 1, 0) = 1),
    AND(IF(Survey_Status__c = 3, 1, 0) = 1, IF(SupervisorsSupervisorId__c = $User.Id, 1, 0) = 1)
  ),
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To $User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>