force-app/main/default/objects/DualEmploymentSurvey__c/fields/Attestation_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Time_Stamp__c</fullName>
    <label>Attestation Time Stamp</label>
    <type>DateTime</type>
</CustomField>