force-app/main/default/objects/DualEmploymentSurvey__c/fields/Changes_Required_To_Conflict_Plan__c.field-meta.xml
<CustomField>
    <fullName>Changes_Required_To_Conflict_Plan__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Changes Required To Conflict Plan</label>
    <type>Picklist</type>
</CustomField>