force-app/main/default/objects/DualEmploymentSurvey__c/fields/Conflict_Management_Plan_Assigned_By__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Management_Plan_Assigned_By__c</fullName>
    <label>Conflict Management Plan Assigned By</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>