force-app/main/default/objects/DualEmploymentSurvey__c/fields/Current_Step__c.field-meta.xml
<CustomField>
    <fullName>Current_Step__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Current Step</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>