force-app/main/default/objects/DualEmploymentSurvey__c/fields/Denial_Comment__c.field-meta.xml
<CustomField>
    <fullName>Denial_Comment__c</fullName>
    <label>Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>