force-app/main/default/objects/DualEmploymentSurvey__c/fields/Description_of_Gifts__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Gifts__c</fullName>
    <label>Description of Gifts</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>