force-app/main/default/objects/DualEmploymentSurvey__c/fields/Following_Conflict_Mgt_Plans__c.field-meta.xml
<CustomField>
    <fullName>Following_Conflict_Mgt_Plans__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Following Conflict Mgt Plans</label>
    <type>Picklist</type>
</CustomField>