force-app/main/default/objects/DualEmploymentSurvey__c/fields/Fourth_Outside_Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Outside_Employer_Address__c</fullName>
    <label>Fourth_Outside_Employer_Address</label>
    <type>TextArea</type>
</CustomField>