force-app/main/default/objects/DualEmploymentSurvey__c/fields/Fourth_Outside_Employer_Brief_Job__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Outside_Employer_Brief_Job__c</fullName>
    <label>Fourth_Outside_Employer_Brief_Job</label>
    <type>TextArea</type>
</CustomField>