force-app/main/default/objects/DualEmploymentSurvey__c/fields/Fourth_Outside_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Outside_Employer_City__c</fullName>
    <label>Fourth_Outside_Employer_City</label>
    <type>TextArea</type>
</CustomField>