force-app/main/default/objects/DualEmploymentSurvey__c/fields/Fourth_Outside_Employer_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Outside_Employer_Job_Status__c</fullName>
    <label>Fourth_Outside_Employer_Job_Status</label>
    <picklist>
        <picklistValues>
            <fullName>Full-Time</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Part-Time</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Registry</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>