force-app/main/default/objects/DualEmploymentSurvey__c/fields/Fourth_Outside_Employer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Outside_Employer_Zip_Code__c</fullName>
    <label>Fourth_Outside_Employer_Zip_Code</label>
    <type>TextArea</type>
</CustomField>