force-app/main/default/objects/DualEmploymentSurvey__c/fields/Has3rdOutsideJob__c.field-meta.xml
<CustomField>
    <fullName>Has3rdOutsideJob__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Has3rdOutsideJob</label>
    <type>Picklist</type>
</CustomField>