force-app/main/default/objects/DualEmploymentSurvey__c/fields/Has4thOutsideJob__c.field-meta.xml
<CustomField>
    <fullName>Has4thOutsideJob__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Has4thOutsideJob</label>
    <type>Picklist</type>
</CustomField>