force-app/main/default/objects/DualEmploymentSurvey__c/fields/Has_Agreed_To_Comply_With_Policies__c.field-meta.xml
<CustomField>
    <fullName>Has_Agreed_To_Comply_With_Policies__c</fullName>
    <label>Has Agreed To Comply With Policies</label>
    <picklist>
        <picklistValues>
            <fullName>Agree To Comply</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Disagree</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>