force-app/main/default/objects/DualEmploymentSurvey__c/fields/Has_Other_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Has_Other_Conflicts__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Has Other Conflicts</label>
    <type>Picklist</type>
</CustomField>