force-app/main/default/objects/DualEmploymentSurvey__c/fields/Has_Second_Outside_Employer__c.field-meta.xml
<CustomField>
    <fullName>Has_Second_Outside_Employer__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Has Second Outside Employer</label>
    <type>Picklist</type>
</CustomField>