force-app/main/default/objects/DualEmploymentSurvey__c/fields/Institutional_Review_Board_Info__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Review_Board_Info__c</fullName>
    <label>Institutional Review Board Info</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>