force-app/main/default/objects/DualEmploymentSurvey__c/fields/Involved_In_Sponsored_Research__c.field-meta.xml
<CustomField>
    <fullName>Involved_In_Sponsored_Research__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Involved In Sponsored Research</label>
    <type>Picklist</type>
</CustomField>