force-app/main/default/objects/DualEmploymentSurvey__c/fields/Is_A_Dual_Employee__c.field-meta.xml
<CustomField>
    <fullName>Is_A_Dual_Employee__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Has Dual Employment</label>
    <type>Picklist</type>
</CustomField>