force-app/main/default/objects/DualEmploymentSurvey__c/fields/Is_Owner_s_Supervisor_s_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_s_Supervisor_s_Supervisor__c</fullName>
    <formula>IF(SupervisorsSupervisorId__c = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner&#39;s Supervisor&#39;s Supervisor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>