force-app/main/default/objects/DualEmploymentSurvey__c/fields/Is_Owners_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Is_Owners_Supervisor__c</fullName>
    <formula>IF( SupervisorId__c = $User.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Owner&#39;s Supervisor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>