force-app/main/default/objects/DualEmploymentSurvey__c/fields/Job1NumberOfHours__c.field-meta.xml
<CustomField>
    <fullName>Job1NumberOfHours__c</fullName>
    <label>Job1NumberOfHours</label>
    <type>TextArea</type>
</CustomField>