force-app/main/default/objects/DualEmploymentSurvey__c/fields/Job1NumberOfHoursTimeFrame__c.field-meta.xml
<CustomField>
    <fullName>Job1NumberOfHoursTimeFrame__c</fullName>
    <label>Job1NumberOfHoursTimeFrame</label>
    <picklist>
        <picklistValues>
            <fullName>Weekly</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Monthly</fullName>
        </picklistValues>
        <restrictedPicklist>true</restrictedPicklist>
    </picklist>
    <type>Picklist</type>
</CustomField>