force-app/main/default/objects/DualEmploymentSurvey__c/fields/Level2_Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Level2_Supervisor_Name__c</fullName>
    <label>Level2 Supervisor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>