force-app/main/default/objects/DualEmploymentSurvey__c/fields/Name_Of_Responsibility_Organization__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_Responsibility_Organization__c</fullName>
    <label>Name Of Responsibility Organization</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>