force-app/main/default/objects/DualEmploymentSurvey__c/fields/Notified_Assigning_Organization__c.field-meta.xml
<CustomField>
    <fullName>Notified_Assigning_Organization__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>Notified Assigning Organization</label>
    <type>Picklist</type>
</CustomField>