force-app/main/default/objects/DualEmploymentSurvey__c/fields/On_Call_Or_Rotate_Shifts__c.field-meta.xml
<CustomField>
    <fullName>On_Call_Or_Rotate_Shifts__c</fullName>
    <globalPicklist>Yes_No</globalPicklist>
    <label>On Call Or Rotate Shifts?</label>
    <type>Picklist</type>
</CustomField>