force-app/main/default/objects/DualEmploymentSurvey__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <label>Organization Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>