force-app/main/default/objects/DualEmploymentSurvey__c/fields/Other_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>Other_Conflicts__c</fullName>
    <label>Other Conflicts</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>