force-app/main/default/objects/DualEmploymentSurvey__c/fields/Outside_Employer__c.field-meta.xml
<CustomField>
    <fullName>Outside_Employer__c</fullName>
    <label>Outside Employer</label>
    <type>TextArea</type>
</CustomField>