force-app/main/default/objects/DualEmploymentSurvey__c/fields/Outside_Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Outside_Employer_Address__c</fullName>
    <label>Outside Employer Address</label>
    <type>TextArea</type>
</CustomField>