force-app/main/default/objects/DualEmploymentSurvey__c/fields/Outside_Employer_Brief_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Outside_Employer_Brief_Job_Description__c</fullName>
    <label>Outside Employer Brief Job Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>