force-app/main/default/objects/DualEmploymentSurvey__c/fields/Outside_Employer_City__c.field-meta.xml
<CustomField>
    <fullName>Outside_Employer_City__c</fullName>
    <label>Outside Employer City</label>
    <type>TextArea</type>
</CustomField>