force-app/main/default/objects/DualEmploymentSurvey__c/fields/Outside_Employer_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Outside_Employer_Hire_Date__c</fullName>
    <label>Outside Employer Hire Date</label>
    <type>Date</type>
</CustomField>