force-app/main/default/objects/DualEmploymentSurvey__c/fields/Outside_Employer_Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Outside_Employer_Job_Title__c</fullName>
    <label>Outside Employer Job Title</label>
    <type>TextArea</type>
</CustomField>