force-app/main/default/objects/DualEmploymentSurvey__c/fields/Outside_Employer_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Outside_Employer_Zip_Code__c</fullName>
    <label>Outside Employer Zip Code</label>
    <type>TextArea</type>
</CustomField>