force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1FriEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1FriEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1FriEndTime</label>
    <type>Picklist</type>
</CustomField>