force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1FriStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1FriStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1FriStartTime</label>
    <type>Picklist</type>
</CustomField>