force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1MonEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1MonEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1MonEndTime</label>
    <type>Picklist</type>
</CustomField>