force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1MonStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1MonStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1MonStartTime</label>
    <type>Picklist</type>
</CustomField>