force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1SatEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1SatEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1SatEndTime</label>
    <type>Picklist</type>
</CustomField>