force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1SatStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1SatStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1SatStartTime</label>
    <type>Picklist</type>
</CustomField>