force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1SunEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1SunEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1SunEndTime</label>
    <type>Picklist</type>
</CustomField>