force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1SunStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1SunStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1SunStartTime</label>
    <type>Picklist</type>
</CustomField>