force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1ThurEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1ThurEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1ThurEndTime</label>
    <type>Picklist</type>
</CustomField>