force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1ThurStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1ThurStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1ThurStartTime</label>
    <type>Picklist</type>
</CustomField>