force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1TotalHours__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1TotalHours__c</fullName>
    <label>OutsideEmployer1TotalHours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>