force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1TotalWeeklyHours__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1TotalWeeklyHours__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1TotalWeeklyHours</label>
    <type>Picklist</type>
</CustomField>