force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1TueEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1TueEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1TueEndTime</label>
    <type>Picklist</type>
</CustomField>