force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1TueStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1TueStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1TueStartTime</label>
    <type>Picklist</type>
</CustomField>