force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1WedEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1WedEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1WedEndTime</label>
    <type>Picklist</type>
</CustomField>