force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer1WedStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer1WedStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer1WedStartTime</label>
    <type>Picklist</type>
</CustomField>