force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2FriEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2FriEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2FriEndTime</label>
    <type>Picklist</type>
</CustomField>