force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2FriStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2FriStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2FriStartTime</label>
    <type>Picklist</type>
</CustomField>