force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2MonEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2MonEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2MonEndTime</label>
    <type>Picklist</type>
</CustomField>