force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2MonStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2MonStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2MonStartTime</label>
    <type>Picklist</type>
</CustomField>