force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2SatEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2SatEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2SatEndTime</label>
    <type>Picklist</type>
</CustomField>