force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2SatStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2SatStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2SatStartTime</label>
    <type>Picklist</type>
</CustomField>