force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2SunEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2SunEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2SunEndTime</label>
    <type>Picklist</type>
</CustomField>