force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2SunStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2SunStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2SunStartTime</label>
    <type>Picklist</type>
</CustomField>