force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2ThurEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2ThurEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2ThurEndTime</label>
    <type>Picklist</type>
</CustomField>