force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2ThurStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2ThurStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2ThurStartTime</label>
    <type>Picklist</type>
</CustomField>