force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2TotalHours__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2TotalHours__c</fullName>
    <label>OutsideEmployer2TotalHours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>