force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2TueEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2TueEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2TueEndTime</label>
    <type>Picklist</type>
</CustomField>