force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2TueStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2TueStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2TueStartTime</label>
    <type>Picklist</type>
</CustomField>