force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2WedEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2WedEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2WedEndTime</label>
    <type>Picklist</type>
</CustomField>