force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer2WedStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer2WedStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer2WedStartTime</label>
    <type>Picklist</type>
</CustomField>