force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3FriEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3FriEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3FriEndTime</label>
    <type>Picklist</type>
</CustomField>