force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3FriStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3FriStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3FriStartTime</label>
    <type>Picklist</type>
</CustomField>