force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3MonEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3MonEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3MonEndTime</label>
    <type>Picklist</type>
</CustomField>