force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3MonStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3MonStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3MonStartTime</label>
    <type>Picklist</type>
</CustomField>