force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3SatEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3SatEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3SatEndTime</label>
    <type>Picklist</type>
</CustomField>