force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3SatStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3SatStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3SatStartTime</label>
    <type>Picklist</type>
</CustomField>