force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3SunEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3SunEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3SunEndTime</label>
    <type>Picklist</type>
</CustomField>