force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3SunStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3SunStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3SunStartTime</label>
    <type>Picklist</type>
</CustomField>