force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3ThurEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3ThurEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3ThurEndTime</label>
    <type>Picklist</type>
</CustomField>