force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3ThurStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3ThurStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3ThurStartTime</label>
    <type>Picklist</type>
</CustomField>