force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3TotalHours__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3TotalHours__c</fullName>
    <label>OutsideEmployer3TotalHours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>