force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3TueEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3TueEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3TueEndTime</label>
    <type>Picklist</type>
</CustomField>