force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3TueStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3TueStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3TueStartTime</label>
    <type>Picklist</type>
</CustomField>