force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3WedEndTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3WedEndTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3WedEndTime</label>
    <type>Picklist</type>
</CustomField>