force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideEmployer3WedStartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideEmployer3WedStartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideEmployer3WedStartTime</label>
    <type>Picklist</type>
</CustomField>