force-app/main/default/objects/DualEmploymentSurvey__c/fields/OutsideJob1StartTime__c.field-meta.xml
<CustomField>
    <fullName>OutsideJob1StartTime__c</fullName>
    <globalPicklist>X24_Hour_Clock_Values</globalPicklist>
    <label>OutsideJob1StartTime</label>
    <type>Picklist</type>
</CustomField>